[workspace]

members = [
    "book_15_5_refcell",
    "rc_manipulation",
    "lists",
    "linked_list_implementations",
    "treenode_to_vec",
    "icc_simple_doubly_linked_list",
    "p24_swap_nodes_in_pairs_review_01",
    "p24_swap_nodes_in_pairs_review_02",
    "invert_linked_list",
    "icc_arrays_and_strings_prefix_sum_example_1",
    "vec_to_binary_tree",
]
